--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,23 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:7.2.3
+    container_name: bank-redis
+    restart: always
+    ports:
+      - "6379:6379"
+
   app:
     build: .
     image: bank-rest-app:latest
     container_name: bank-rest-app
     depends_on:
       - db
+      - redis
     environment:
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/bank_rest
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: root
